force-app/main/default/objects/Task_Template_Items__c/Task_Template_Items__c.object-meta.xml
<CustomObject>
    <label>Task Template Item</label>
    <nameField>
        <label>Task Template Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>