force-app/main/default/objects/Task_Template_Items__c/fields/Create_Task_X_Days_From_Event__c.field-meta.xml
<CustomField>
    <fullName>Create_Task_X_Days_From_Event__c</fullName>
    <label>Create Task X Days From Event</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>