force-app/main/default/objects/Task_Template_Items__c/fields/Cycle_Step_Day__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Step_Day__c</fullName>
    <label>Cycle Step Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>