force-app/main/default/objects/Task_Template_Items__c/fields/Cycle_Step_Name__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Step_Name__c</fullName>
    <label>Cycle Step Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>