force-app/main/default/objects/Task_Template_Items__c/fields/Expected_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Expected_Parameters__c</fullName>
    <label>Expected Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>