force-app/main/default/objects/Task_Template_Items__c/fields/Master_Medication_List__c.field-meta.xml
<CustomField>
    <fullName>Master_Medication_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Medication List</label>
    <referenceTo>Master_Medication_List__c</referenceTo>
    <relationshipLabel>Task Template Items</relationshipLabel>
    <relationshipName>Task_Template_Items</relationshipName>
    <type>Lookup</type>
</CustomField>