force-app/main/default/objects/Task_Template_Items__c/fields/Ordered_Tests__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Tests__c</fullName>
    <label>Ordered Tests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>