force-app/main/default/objects/Task_Template_Items__c/fields/Pathology_Test__c.field-meta.xml
<CustomField>
    <fullName>Pathology_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pathology Test</label>
    <referenceTo>Pathology_Test__c</referenceTo>
    <relationshipLabel>Task Template Items</relationshipLabel>
    <relationshipName>Task_Template_Items</relationshipName>
    <type>Lookup</type>
</CustomField>