force-app/main/default/objects/Task_Template_Items__c/fields/Task_Allocated_to__c.field-meta.xml
<CustomField>
    <fullName>Task_Allocated_to__c</fullName>
    <label>Task Allocated to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Doctors</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>