force-app/main/default/objects/Task_Template_Items__c/fields/Task_Template__c.field-meta.xml
<CustomField>
    <fullName>Task_Template__c</fullName>
    <label>Task Template</label>
    <referenceTo>Task_Template__c</referenceTo>
    <relationshipLabel>Task Template Items</relationshipLabel>
    <relationshipName>Task_Template_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>