force-app/main/default/objects/Task_Template_Items__c/recordTypes/Checklist_Item.recordType-meta.xml
<RecordType>
    <fullName>Checklist_Item</fullName>
    <active>true</active>
    <label>Checklist Item</label>
</RecordType>