force-app/main/default/objects/Task_Template_Items__c/recordTypes/Pathology.recordType-meta.xml
<RecordType>
    <fullName>Pathology</fullName>
    <active>true</active>
    <label>Pathology</label>
</RecordType>